UI dis-alignment issues fix update

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -218,7 +218,7 @@ main {
 .main--container {
   display: flex;
   flex-direction: column;
-  max-height: 90vh;
+  max-height: 80vh;
   /* max-width: 10vh; */
 }
 
@@ -232,12 +232,10 @@ main {
 .msg--container {
   display: flex;
   flex-direction: column;
-  max-height: 120vh;
+  max-height: 80vh;
   max-width: 60vh;
   border-left: 1px solid;
   border-right: 1px solid;
-  /* scrollbar-width: 0; */
-
 }
 
 #msg--output {
@@ -247,14 +245,16 @@ main {
   justify-content: end;
   height: 120vh;
   margin-left: 20px;
-  /* scrollbar-width: none; */
   overflow: hidden;
 }
 
 #msg--input {
   padding: 5px 5px 5px 5px;
-  width: 97%;
+  max-width: 57vh;
+  width: 100%;
   height: 50px;
+  text-align: left;
+  border: none;
 }
 
 #list--dropdown--button {
@@ -282,10 +282,10 @@ main {
 
 #msg--send--icon {
   position: absolute;
-  bottom: 0;
   right: 0;
   margin-bottom: 20px;
-  margin-right: 25px;
+  margin-right: 15px;
+  padding-top: 23px;
   width: auto;
   height: 20px;
 }
